# wuphf

./: .coderabbit.yaml  .commitlintrc.json  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN-WIKI.md  DESIGN.md  DEVELOPMENT.md  FORKING.md  PHASE-0-LEDGER.md  PLAN.md  PRODUCT.md  README.md  SKILL.md  TODOS.md  VERSION  embed.go  go.mod  go.sum  lefthook.yml  package-lock.json  package.json  templates_embed.go  templates_embed_test.go
.github/: CODEOWNERS  dependabot.yml
.gstack/: browse-audit.jsonl  browse.json  claude-available.json  terminal-agent-pid  terminal-internal-token
agent/: .gitignore  README.md  package.json  tsconfig.json
claude-code-plugin/: README.md  package-lock.json  package.json  settings.json
cli/: .gitignore  .rules  GO_PORT_TYPES.md  README.md  package-lock.json  package.json
docs/: ADD-A-TRANSPORT.md  (+25 more)
harness/: README.md  pyproject.toml
harness/scripts/: smoke.sh
harness/src/harness/: __init__.py  build_agent.py  executor.py  mcp.py  providers.py  service.py  tools.py  wire.py
harness/tests/: test_build_agent.py  test_executor.py  test_mcp.py  test_providers.py  test_service.py  test_tools.py  test_wire.py
orchestrator/: README.md  pyproject.toml
orchestrator/scripts/: live_decompose_check.py  live_harness_check.py  live_service_check.py  smoke.sh  stub_team_task_mcp.py
orchestrator/src/orchestrator/: __init__.py  coordination.py  graph.py  harness.py  lifecycle.py  runstate.py  service.py  wire.py
orchestrator/tests/: test_coordination.py  test_graph.py  test_harness.py  test_lifecycle.py  test_service.py  test_wire.py
(+3540 files in other folders)
